# Auto-BenchMax

./: .gitignore  README.md  README_zh.md
codes/mcp-atlas/services/agent-environment/: .dockerignore  Dockerfile  README.md  entrypoint.sh  mypy.ini  pyproject.toml
codes/mcp-atlas/services/agent-environment/data/: Barber Shop.csv  CoinbaseTradeHistory.csv  Covid 19 impacts on hospitals.csv  Crime_records.csv  Pet Care 2023 Weekly Financials.csv  Top Movies.csv  fantasy sports.csv  food and beverage consumption.csv
codes/mcp-atlas/services/agent-environment/dev_scripts/: get_submodule_shas.sh  install_mcp_packages.sh
codes/mcp-atlas/services/agent-environment/tests/: test_mcp_config_sync.py
codes/mcp-atlas/services/mcp_eval/: README.md  convert_csv_to_sft.py  convert_json_to_jsonl.py  download_hf_dataset.py  excluded_tasks.txt  extract_mcp_servers_per_task.py  mcp_completion_script.py  mcp_evals_scores.py  pyproject.toml  requirements.txt  run.py  sample_prompts-tool-map.json  sample_tasks.csv
codes/mcp-atlas/services/mcp_eval/completion_results/: debug_results.csv  mcp_eval_qwen3_coder_egts_replay_6k_mcp_results0718.csv  sample_51_results.csv  sample_qwen3_coder_sftmcp_results0612-1.csv  sample_tasks-tool-map.json  sft_training_data.jsonl  sft_training_data_filtered.json  synth_probe.csv  synth_roll_full.bak.csv  synth_roll_smoke.csv  synth_selfscore_smoke.csv
codes/mcp-atlas/services/mcp_eval/eval_scripts/: merge_jsonl.py
codes/mcp-atlas/services/mcp_eval/evaluation_results/: coverage_stats_deepseek_v3_31_system_prompt.csv  coverage_stats_deepseek_v3_ep_system_prompt.csv  coverage_stats_glm46.csv  (+35 more)
(+122 files in other folders)
