[project]
name = "agent-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "cacheout>=0.16.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.10.6",
    "mcp[cli]>=1.9.3",
    "python-dotenv>=1.0.0",
    "python-json-logger>=3.3.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]

[project.scripts]
agent-environment = "agent_environment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]
